...
            onPressed: () {
              Navigator.pop(context);
              setState(() {
                _searchQuery = _searchController.text;
              });
            },
            child: const Text('Поиск'),
          ),
        ],
      ),
    );
  }

...
            ),
            TextButton(
              onPressed: () {
                Navigator.pop(context);
                setState(() {});
              },
              child: const Text('Применить'),
            ),
          ],
        ),
      ),
    );
  }
...
