...
              child: const Text('Отмена'),),
          TextButton(
            onPressed: () {
              Navigator.pop(context);
              // TODO: Реализовать поиск
            },
            child: const Text('Найти'),
          ),
        ],
      ),
    );
  }

...
